testsuite/tests/properties/invalid_new_node/list_synth.lkt
import common

@synthetic class LiteralList: ASTList[FooNode, Literal] {
    @memoized fun prop(): LiteralList = LiteralList()
}
